# latticearc

./: .gitignore  API_DESIGN_REVIEW_2026-02-11.md  AWS_LC_RS_PR_1029_UPDATE.md  CHANGELOG.md  CI_ANALYSIS_2026-02-11.md  CI_WORKFLOW_STATUS.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_CLEANUP_2026-02-11.md  DOCS_UPDATE_PLAN.md  FIPS_INTEGRITY_TEST_IMPLEMENTATION.md  README.md  RUSTSEC_ADVISORIES_IGNORED.md  SECURITY.md  SECURITY_GUIDANCE_REVIEW_2026-02-11.md  clippy.toml  deny.toml  fuzz  index.html  test_integrity.rs  udeps-report.txt
arc-core/: Cargo.toml  README.md  sbom-cyclonedx.json
arc-core/src/: audit.rs  config.rs  error.rs  hardware.rs  key_lifecycle.rs  lib.rs  logging.rs  selector.rs  serialization.rs  tests.rs  traits.rs  types.rs  zero_trust.rs
arc-core/tests/: aes_gcm_convenience_tests.rs  api_stability_comprehensive.rs  config_comprehensive.rs  convenience_with_config_coverage.rs  direct_scheme_coverage.rs  ed25519_convenience_tests.rs  hardware_comprehensive.rs  hybrid_convenience_tests.rs  hybrid_sig_convenience_tests.rs  init_self_tests.rs  negative_tests_aead.rs  negative_tests_pq_kem.rs  negative_tests_pq_sig.rs  pq_kem_convenience_tests.rs  pq_sig_convenience_tests.rs  pq_sig_error_paths.rs  pq_sig_with_config_coverage.rs  selector_trait_coverage.rs  signature_integration.rs  signing_unified_integration.rs  unified_api_coverage.rs  version_compatibility_comprehensive.rs  zero_trust_comprehensive.rs
arc-perf/: Cargo.toml  sbom-cyclonedx.json
arc-perf/tests/: integration_test.rs  performance_comprehensive.rs
arc-primitives/: Cargo.toml  README.md  build.rs  sbom-cyclonedx.json
arc-primitives/examples/: comprehensive_benchmark.rs  crypto_timing.rs
arc-primitives/src/: fips_error.rs  gpu.rs  lib.rs  pct.rs  security.rs  self_test.rs
arc-primitives/tests/: concurrency_comprehensive.rs  concurrency_tests.rs  constant_time.rs  constant_time_verification.rs  ecdh_comprehensive.rs  fips_error_coverage.rs  fn_dsa_comprehensive.rs  interoperability_comprehensive.rs  ml_dsa_all_params.rs  ml_dsa_comprehensive.rs  ml_kem_comprehensive.rs  negative_tests_aead.rs  negative_tests_kem.rs  regression_comprehensive.rs  security_coverage.rs  self_test_conditional_kats.rs  side_channel_comprehensive.rs  side_channel_resistance.rs  slh_dsa_comprehensive.rs  stress_comprehensive.rs  test_kdf.rs
arc-tests/: Cargo.toml
arc-tests/src/: lib.rs
arc-tests/tests/: aes_gcm_convenience_tests.rs  api_stability_comprehensive.rs  convenience_with_config_coverage.rs  cross_validation_tests.rs  hardware_comprehensive.rs  hardware_integration.rs  hybrid_integration.rs  negative_tests_aead.rs  negative_tests_pq_kem.rs  negative_tests_pq_sig.rs  platform_compatibility_comprehensive.rs  pq_kem_convenience_tests.rs  pq_sig_error_paths.rs  pq_sig_with_config_coverage.rs  proptest_hybrid_encrypt.rs  proptest_hybrid_kem.rs  proptest_hybrid_sig.rs  proptest_pq_kem.rs  proptest_selector.rs  proptest_unified_api.rs  unified_api_comprehensive.rs  unified_api_coverage.rs
arc-tls/: Cargo.toml  MONITORING.md  README.md  sbom-cyclonedx.json
arc-tls/benches/: tls_performance.rs
arc-tls/src/: basic_features.rs  context.rs  error.rs  lib.rs  pq_key_exchange.rs  recovery.rs  selector.rs  session_store.rs  tls13.rs  tracing.rs
arc-tls/tests/: basic.rs  error_handling_tests.rs  hybrid_tls.rs  selector_tests.rs  tls13_validation_coverage.rs  tls_comprehensive.rs  tls_handshake_roundtrip.rs  tls_protocol_comprehensive.rs  tls_session_comprehensive.rs
arc-types/: Cargo.toml
arc-types/src/: config.rs  domains.rs  error.rs  key_lifecycle.rs  lib.rs  selector.rs  traits.rs  types.rs  zero_trust.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chacha_poly_fuzz.rs  cross_border_fuzz.rs  encrypt_fuzz.rs  fuzz_aes_gcm.rs  fuzz_chacha20.rs  fuzz_dos_alloc_bounded.rs  fuzz_ecdh_p256.rs  fuzz_ed25519.rs  fuzz_encrypted_data_deser.rs  fuzz_fn_dsa_sign.rs  fuzz_fn_dsa_verify.rs  fuzz_hkdf.rs  fuzz_hmac_sha512.rs  fuzz_hybrid_decrypt.rs  fuzz_hybrid_encrypt.rs  fuzz_ml_dsa_sign.rs  fuzz_ml_dsa_verify.rs  fuzz_ml_kem_decaps.rs  fuzz_ml_kem_encaps.rs  fuzz_ml_kem_keygen.rs  fuzz_pbkdf2.rs  fuzz_portable_key_json.rs  fuzz_random.rs  fuzz_sha256.rs  fuzz_slh_dsa_sign.rs  fuzz_target_1.rs  fuzz_x25519.rs  hash_data_fuzz.rs  hmac_fuzz.rs  hybrid_encrypt_fuzz.rs  hybrid_kem_fuzz.rs  hybrid_sign_fuzz.rs  ml_dsa_fuzz.rs
fuzz/oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
fuzz/tests/: fuzz_regression_tests.rs
latticearc/: Cargo.toml  README.md  build.rs  sbom-cyclonedx.json
latticearc-cli/: Cargo.toml  QUICK_REFERENCE.md  README.md  USER_GUIDE.md
latticearc-cli/src/: keyfile.rs  keystore.rs  main.rs
latticearc-cli/tests/: CLI_PROOF_EVIDENCE_EXPLAINED.md  cli_integration.rs  cli_proof_evidence.rs  keystore_proof_evidence.rs
latticearc/benches/: benchmarks.rs  constant_time.rs  tls_performance.rs
latticearc/examples/: basic_encryption.rs  complete_secure_workflow.rs  comprehensive_benchmark.rs  crypto_timing.rs  digital_signatures.rs  hybrid_encryption.rs  post_quantum_signatures.rs  test_ml_kem.rs  test_rustls_compat.rs  tls13_custom_hybrid.rs  tls13_hybrid_client.rs  tls_policy.rs  true_hybrid_encryption.rs  unified_api.rs  zero_knowledge_proofs.rs
latticearc/src/: lib.rs
latticearc/tests/: audit_fix_coverage.rs  audit_regression_kem_kdf.rs  audit_regression_primitives.rs  audit_regression_signatures.rs  audit_regression_zero_trust.rs  fips_203_section_7_3_decaps_is_total.rs  hybrid_encrypt.rs  hybrid_encrypt_hybrid_coverage.rs  hybrid_encrypt_hybrid_validation.rs  hybrid_encrypt_true_coverage.rs  hybrid_hybrid_encrypt_true_coverage.rs  hybrid_hybrid_roundtrip_integration.rs  hybrid_integration.rs  hybrid_kem.rs  hybrid_kem_hybrid_coverage.rs  hybrid_roundtrip_integration.rs  hybrid_sig.rs  hybrid_sig_hybrid_coverage.rs  hybrid_zeroization_tests.rs  no_partial_eq_on_secret_types.rs  perf_integration_test.rs  perf_performance.rs  perf_performance_comprehensive.rs  prelude_error_recovery_comprehensive.rs  primitives_concurrency.rs  (+57 more)
tests/: Cargo.toml  PROOF_EVIDENCE_EXPLAINED.md
(+58754 files in other folders)
