[workspace]
members = [
    "latticearc",
    "latticearc-cli",
    "tests",
]
# Exclude fuzz crate from workspace builds (uses libfuzzer-sys which requires nightly)
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.93"
authors = ["LatticeArc Dev Team <Dev@LatticeArc.com>"]
license = "Apache-2.0"
description = "Production-ready post-quantum cryptography. Hybrid ML-KEM+X25519 by default, all 4 NIST standards (FIPS 203–206), and FIPS 140-3 backend — one crate, zero unsafe."
readme = "README.md"
homepage = "https://latticearc.com"
documentation = "https://docs.rs/latticearc/latest/latticearc/"
repository = "https://github.com/latticearc/latticearc"
keywords = ["post-quantum", "cryptography", "ml-kem", "ml-dsa", "fips"]
categories = ["cryptography", "authentication"]

[workspace.lints.rust]
# =============================================================================
# RUST COMPILER LINTS - Strictest Reasonable Settings for Cryptographic Code
# =============================================================================
#
# LINT LEVEL SEMANTICS:
# - forbid: Cannot be overridden even with #[allow] - use for absolute security rules
# - deny:   Compile error, but can be overridden with #[allow] + justification
# - warn:   Warning only - use for gradual improvements or crypto-specific overrides
#
# =============================================================================

# -----------------------------------------------------------------------------
# SECURITY-CRITICAL (forbid - cannot be overridden under any circumstances)
# -----------------------------------------------------------------------------
# Rationale: Unsafe code bypasses Rust's memory safety guarantees, which is
# unacceptable in cryptographic code where memory safety bugs lead to vulnerabilities
unsafe_code = "forbid"

# -----------------------------------------------------------------------------
# FORMAL VERIFICATION SUPPORT
# -----------------------------------------------------------------------------
# Allow kani cfg for formal verification (used by Kani verifier)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# -----------------------------------------------------------------------------
# CODE QUALITY (deny - strict enforcement, override with justification)
# -----------------------------------------------------------------------------
# Rationale: Dead/unused code increases attack surface and maintenance burden
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"

# -----------------------------------------------------------------------------
# DOCUMENTATION (deny - production code must have docs)
# -----------------------------------------------------------------------------
# Rationale: Crypto code needs documentation for security audits and maintenance
missing_docs = "deny"

# -----------------------------------------------------------------------------
# OTHER QUALITY LINTS (warn - encourage clean code)
# -----------------------------------------------------------------------------
unused_qualifications = "warn"
ambiguous_glob_reexports = "warn"

[workspace.lints.clippy]
# =============================================================================
# CLIPPY LINTS - Strictest Reasonable Settings for Cryptographic Code
# =============================================================================
#
# These lints are organized by security impact and override-ability.
# Each section explains why the lint level was chosen.
#
# =============================================================================

# -----------------------------------------------------------------------------
# SECURITY LINTS (deny - compile error, can override with documented justification)
# -----------------------------------------------------------------------------
# Rationale: std::process::exit should never be called in library code.
# deny (not forbid) because clap's derive macros emit #[allow(clippy::exit)]
# internally, which is incompatible with forbid.
exit = "deny"

# -----------------------------------------------------------------------------
# SECURITY LINTS (deny - compile error, can override with documented justification)
# -----------------------------------------------------------------------------
# panic: deny instead of forbid because:
# - Test macros (assert!, assert_eq!) need to panic on failure
# - proptest and other test frameworks use panic for test failures
# - Production code should use Result<T, E> instead
panic = "deny"

# expect_used: deny instead of forbid because:
# - Some macro-generated code (tokio::test, proptest) may use expect
# - Allowed in tests with #[cfg(test)] and documented justification
# - Production code should use ? operator or explicit error handling
expect_used = "deny"

# unwrap_used: deny instead of forbid because:
# - Allowed in tests with #[cfg(test)] and documented justification
# - Production code should use ? operator or .ok_or(Error)?
unwrap_used = "deny"

# indexing_slicing: deny instead of forbid because:
# - Validation code processing NIST test vectors may need direct indexing
# - Allowed with bounds-checking documentation
# - Production code should use .get().ok_or(Error)?
indexing_slicing = "deny"

# -----------------------------------------------------------------------------
# ARITHMETIC SAFETY (warn - crypto code may need overrides)
# -----------------------------------------------------------------------------
# Rationale: Crypto algorithms often require specific arithmetic behavior.
# These are warn to allow crates to enable deny selectively or use #[allow]
# with documented justification for specific mathematical operations.
arithmetic_side_effects = "warn"    # Modular arithmetic may intentionally wrap
cast_possible_truncation = "warn"   # Some casts are intentional in crypto
cast_precision_loss = "warn"        # Float-to-int casts may be intentional
cast_sign_loss = "warn"             # May be intentional for bit manipulation

# Cast safety - these are more severe security risks
cast_possible_wrap = "deny"         # Sign wrapping can cause security issues
cast_lossless = "warn"              # Cosmetic - use explicit widening casts

# Error type design - TlsError has large variants by design for comprehensive error info
result_large_err = "allow"          # Allow large error types (design decision)

# -----------------------------------------------------------------------------
# MEMORY SAFETY (deny - critical for cryptographic security)
# -----------------------------------------------------------------------------
# Rationale: Memory leaks of sensitive data are security vulnerabilities
mem_forget = "deny"                 # Prevent memory leaks of sensitive data

# -----------------------------------------------------------------------------
# PANIC PREVENTION (deny - crypto code should never panic)
# -----------------------------------------------------------------------------
# Rationale: Panics in crypto code can lead to DoS or state corruption
manual_assert = "deny"              # Use Result instead of panic! in if-then
panic_in_result_fn = "deny"         # Functions returning Result should not panic
unwrap_in_result = "deny"           # Prevent unwrap in functions returning Result

# -----------------------------------------------------------------------------
# ERROR HANDLING (deny - proper error handling is critical)
# -----------------------------------------------------------------------------
# Rationale: Ignoring errors in crypto code can lead to silent failures
map_err_ignore = "deny"             # Don't ignore error values in map_err
match_wild_err_arm = "deny"         # Don't ignore error values in match arms

# -----------------------------------------------------------------------------
# CODE QUALITY (deny - no placeholder code in production)
# -----------------------------------------------------------------------------
# Rationale: Production crypto code must be complete and reviewed
todo = "deny"                       # No TODOs in production crypto code
unimplemented = "deny"              # No unimplemented! calls
unreachable = "deny"                # No unreachable! calls
dbg_macro = "deny"                  # No debug macros in production
print_stdout = "deny"               # No println! in library code
print_stderr = "deny"               # No eprintln! in library code

# Dead code detection
unused_async = "deny"               # Async fn that doesn't await
unused_self = "warn"                # Unused self parameter (warn for gradual cleanup)

# Stack safety
large_stack_arrays = "deny"         # Prevent large stack allocations (DoS risk)

# -----------------------------------------------------------------------------
# DOCUMENTATION (warn - encourage but don't block)
# -----------------------------------------------------------------------------
# Rationale: Good documentation is important but shouldn't block development
missing_errors_doc = "warn"         # Document error conditions
missing_panics_doc = "warn"         # Document panic conditions
must_use_candidate = "warn"         # Functions that should be #[must_use]
return_self_not_must_use = "allow"  # Allow builder methods without must_use

# -----------------------------------------------------------------------------
# CODE STYLE (warn/allow - encourage idiomatic Rust)
# -----------------------------------------------------------------------------
# Rationale: Clean code is easier to audit and maintain
# Wildcard matches are intentional design patterns for error recovery - new error
# types should default to "no recovery" until explicitly handled
wildcard_enum_match_arm = "allow"   # Intentional design for extensibility
float_cmp = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
lossy_float_literal = "warn"
redundant_clone = "warn"
string_add = "warn"
string_add_assign = "warn"
unnecessary_cast = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
needless_pass_by_value = "allow"   # Allow by-value for small Copy types
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
unnested_or_patterns = "warn"
unused_enumerate_index = "warn"
useless_vec = "warn"

# Additional code quality
option_option = "warn"              # Confusing Option<Option<T>>
verbose_file_reads = "warn"         # Prefer fs::read_to_string
unnecessary_wraps = "warn"          # Functions that always wrap values
explicit_iter_loop = "warn"         # Use for x in &collection
explicit_into_iter_loop = "warn"    # Use for x in collection
manual_let_else = "warn"            # Use let-else pattern

# API design decisions (allow - these represent intentional API choices)
should_implement_trait = "allow"    # Allow method names matching std traits
field_reassign_with_default = "allow" # Allow incremental struct building


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
overflow-checks = true  # Enable for crypto safety
debug-assertions = true  # Keep for crypto validation
incremental = false     # Reproducible builds

[profile.valgrind]
inherits = "release"
debug = 2               # Full debug symbols for Valgrind stack traces
strip = false           # Do not strip — Valgrind needs symbols

[profile.dev]
overflow-checks = true  # Enable even in debug for crypto safety

  [workspace.dependencies]
# Core async runtime - latest stable version for security and performance
tokio = { version = "1.52.1", features = ["full"] }
# Serialization - latest stable with derive features
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
# Random number generation. rand 0.9 (Jan 2025) renames `thread_rng()` →
# `rng()`, `Rng::gen_*` → `random_*`, but keeps `OsRng.fill_bytes` on
# RngCore. Bumped to fix RUSTSEC-2026-0097 (rand 0.8 reseed unsoundness)
# without going to 0.10 which renames `OsRng → SysRng` and `Rng → RngExt`
# for marginal benefit.
rand = { version = "0.9.4", features = ["std_rng", "small_rng", "serde"] }
rand_core = { version = "0.9" }
rand_chacha = { version = "0.9" }
# Bridge to crypto crates (`fn-dsa 0.3`, `ed25519-dalek 2.x`, `x25519-dalek 2.x`)
# whose latest stable releases still depend on `rand_core 0.6`. Aliased as
# `rand_core_0_6` so it can coexist with `rand_core` 0.9 in the same module
# without naming conflicts. Drop this once the dalek 3.x stable line lands
# (currently in `3.0.0-pre.x` with no stable release for 9+ months).
rand_core_0_6 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
# Error handling - latest stable for structured errors
thiserror = { version = "2.0.18" }
anyhow = { version = "1.0.102" }
# Time handling - consistent version across repos
chrono = { version = "0.4.44", features = ["serde"] }
# UUID generation - latest stable
uuid = { version = "1.23.1", features = ["v4", "serde"] }
# Base64 encoding - latest stable for crypto operations
base64 = { version = "0.22.1" }
# Hex encoding - latest stable
hex = { version = "0.4.3" }
# HTTP client - latest stable with rustls default (aligns with our TLS stack)
# Note: rustls is now default in 0.13, "rustls-tls" renamed to "rustls"
reqwest = { version = "0.13", features = ["json"] }
# Async traits - latest stable
async-trait = { version = "0.1.89" }
# Zeroize for secure memory wiping - latest stable
zeroize = { version = "1.8.2", features = ["derive"] }
# Tracing for observability - latest stable
tracing = { version = "0.1.44", features = ["log"] }
# Getrandom for entropy - latest stable
getrandom = { version = "0.3" }
# Array reference utilities - latest stable
arrayref = { version = "0.3" }
# Subtle constant-time operations - latest stable for crypto
subtle = { version = "2.6.1" }
# Cryptographic algorithms - latest stable versions
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
# RustCrypto cipher/hash/MAC/KDF crates — kept in lockstep on the digest 0.11
# generation so trait bounds resolve against a single set of `HashMarker` /
# `FixedOutput` types. Bumping any one of these in isolation breaks the rest.
#
# Round-12 audit fix (M-5): exact-pin RustCrypto crates with `=` for the same
# rationale that pins fips204/205/fn-dsa — these crates have shipped
# breaking API changes within `0.x.y` minor bumps before, and a silent
# `cargo update` could splinter the digest 0.11 trait bounds across the
# workspace. Bump intentionally and re-run the trait-resolution sanity
# tests when updating.
sha2 = { version = "=0.11.0" }
pbkdf2 = { version = "=0.13.0" }
hmac = { version = "=0.13.0" }
# Low-level primitives
aes = { version = "=0.9.0" }
sha3 = { version = "=0.11.0" }
ctr = { version = "=0.10.0" }
hex-literal = { version = "1.1" }
libfuzzer-sys = { version = "0.4.8" }
# Elliptic curve cryptography - latest stable
ecdsa = { version = "0.16.9", features = ["signing", "verifying"] }
p256 = { version = "0.13.2", features = ["ecdsa", "ecdh"] }
k256 = { version = "0.13.4", features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "zeroize"] }
# X25519 needed for CAVP test vector validation (deterministic key generation).
# Round-12 audit fix (M-5): exact-pin per the same rationale as the rest of
# the RustCrypto stack above.
#
# Round-13 audit (M-A) re-evaluation: `x25519-dalek 2.0.1` and
# `ed25519-dalek 2.2.0` transitively pull `digest 0.10` / `sha2 0.10`,
# splitting the workspace into two RustCrypto majors (the rest of our
# direct deps are on 0.11). The dalek crates have not yet released
# versions on the 0.11 generation. The split is contained — `subtle` /
# `ConstantTimeEq` glue between the two majors is type-compatible — and
# the unification is blocked on upstream. Revisit when ed25519-dalek
# / x25519-dalek cut a release on RustCrypto 0.11.
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }
# Post-quantum cryptography - FIPS 140-3 validated via aws-lc-rs
# aws-lc-rs provides ML-KEM with FIPS 140-3 certification (Certificate #4631, #4759, #4816)
# Note: FIPS mode requires cmake and go build tools
aws-lc-rs = { version = "1.16.3" }

# Post-quantum signatures - aws-lc-rs ML-DSA is unstable and requires !fips feature
# See: https://github.com/aws/aws-lc-rs/issues/964 (FIPS branch lacks ML-DSA)
# Our PRs merged in v1.16.0: #1029 (DecapsulationKey serialization), #1034 (ML-DSA from_seed)
#
# PQC crates are pinned with `=` (exact version) rather than the default
# caret. These crates have shipped breaking API changes within `0.x.y`
# minor bumps before, and a silent `cargo update` could regress signature
# verification or keygen behaviour in a downstream consumer's fresh
# resolve. Bump intentionally and re-run the FIPS validation suite when
# updating.
fips204 = { version = "=0.4.6" } # ML-DSA (FIPS 204) — keep until aws-lc-rs exposes it
fips205 = { version = "=0.4.1" } # SLH-DSA (FIPS 205) — not yet in aws-lc-rs
fn-dsa = { version = "=0.3.0" }  # FN-DSA (FIPS 206) — unique implementation

# Development and testing
proptest = { version = "1.11" }
criterion = { version = "0.8.2", features = ["html_reports"] }
rayon = { version = "1.12" }
test-case = { version = "3.0" }
# `tempfile` is security-adjacent: it sets the perms (0o600 on Unix) on
# the file holding key material during atomic-write operations
# (`unified_api::atomic_write::AtomicWrite`). Pin with `=` per round-6
# audit policy for security-adjacent crates so a `cargo update` can't
# silently land a behaviour change in the temp-file ACL path. Bump
# intentionally and re-check the Windows DACL story when updating.
tempfile = { version = "=3.27.0" }
# Tracing and observability
tracing-subscriber = { version = "0.3.23" }
tracing-appender = { version = "0.2" }

# CLI
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
# Secure password prompt — reads without echo. Used by `latticearc-cli` for
# passphrase-based key protection. Transitively depends on `libc` (Unix) /
# `windows-sys` (Windows); `libc` is already allowed via aws-lc-sys.
rpassword = { version = "7.4" }

# Common utilities
parking_lot = { version = "0.12.5" }
# Round-12 audit fix (M-5): exact-pin blake2 (used in proof-evidence and
# CAVP cross-validation paths).
blake2 = { version = "=0.10.6" }
ciborium = { version = "0.2" }
# Round-12 audit fix (M-6): hkdf hoisted out of latticearc/Cargo.toml to
# the workspace so the trait-resolution version is canonical across crates.
hkdf = { version = "=0.13.0" }
# Round-12 audit fix (M-7): elliptic-curve hoisted to workspace so p256/
# k256 (which transitively depend on it) and any direct latticearc usage
# resolve against the same patch — otherwise the trait boundary splinters.
elliptic-curve = { version = "=0.13.8" }

[profile.bench]
 lto = true
 codegen-units = 1
 opt-level = 3
overflow-checks = true
