[package]
name = "arc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LatticeArc Core - Unified Cryptographic API with Zero-Trust Security"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
# FIPS 140-3 mode: gates non-FIPS algorithms, enables self-tests
fips = ["arc-primitives/fips", "fips-self-test"]
fips-self-test = ["arc-primitives/fips-self-test"]

[dependencies]
arc-types = { version = "0.1.2", path = "../arc-types" }
arc-primitives = { version = "0.1.2", path = "../arc-primitives" }
arc-hybrid = { version = "0.1.2", path = "../arc-hybrid" }
thiserror = { workspace = true }

# Tracing and logging dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

# Cryptographic and utility dependencies
aws-lc-rs = { workspace = true }  # FIPS 140-3 validated crypto (AES-GCM, HKDF)
blake2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }

sha3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"
