[package]
name = "arc-perf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance profiling and benchmarking for LatticeArc"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
# FIPS mode marker: gates tests that use non-FIPS algorithms
fips = []

[dependencies]
# Core dependencies

[dev-dependencies]
criterion = { workspace = true }
arc-primitives = { path = "../arc-primitives" }
arc-core = { path = "../arc-core" }
rand = { workspace = true }

[lib]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
