[package]
name = "arc-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Comprehensive test suite for LatticeArc - regression, API stability, and concurrency tests"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
# FIPS 140-3 mode: gates non-FIPS algorithms (e.g., ChaCha20-Poly1305 KAT tests)
fips = ["arc-core/fips", "arc-primitives/fips"]

[dependencies]
# LatticeArc crates
latticearc = { version = "0.1.1", path = "../latticearc" }
arc-core = { version = "0.1.1", path = "../arc-core" }
arc-primitives = { version = "0.1.1", path = "../arc-primitives" }
arc-types = { version = "0.1.1", path = "../arc-types" }
arc-hybrid = { version = "0.1.1", path = "../arc-hybrid" }

# Property-based testing
proptest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Cryptographic dependencies for testing
rand = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

# Serialization for API stability tests
serde = { workspace = true }
serde_json = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }

# Time handling for zero-trust tests
chrono = { workspace = true }

[lib]
path = "src/lib.rs"
