[package]
name = "arc-tls"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TLS 1.3 with post-quantum key exchange for LatticeArc"
readme = "README.md"
repository.workspace = true
keywords = ["tls", "post-quantum", "cryptography", "rustls"]
categories = ["cryptography", "network-programming"]

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
formal-verification = []
kani = []
saw = []

[dependencies]
arc-primitives = { path = "../arc-primitives", version = "0.1.2" }
arc-core = { path = "../arc-core", version = "0.1.2" }
arc-hybrid = { path = "../arc-hybrid", version = "0.1.2" }
rustls = { workspace = true }
rustls-post-quantum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }

# Additional TLS dependencies
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
sha2 = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "tls_performance"
harness = false

[[example]]
name = "tls13_hybrid_client"

[[example]]
name = "tls13_custom_hybrid"
