[package]
name = "arc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LatticeArc Types - Pure-Rust domain types, traits, and policy engine with zero FFI dependencies"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[dependencies]
zeroize = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
