[package]
name = "fuzz"
version = "0.4.1"
publish = false
edition = "2024"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[lints.rust]
# Forbid unsafe code entirely - critical for cryptographic security
unsafe_code = "forbid"
# Note: we deliberately do NOT set `warnings = "deny"` here. The workspace
# library does that, but fuzz targets legitimately trigger stylistic-warning
# lints (e.g. arithmetic_side_effects on `i % len` inside a bounded loop)
# that are noise in a fuzz harness. Real errors (unresolved imports, wrong
# arg counts, etc.) are still hard errors via rustc itself; we just don't
# escalate *every* clippy warn to an error for this crate.

[lints.clippy]
# =============================================================================
# Fuzz-crate lint profile
# =============================================================================
# Fuzz targets run on deliberately-malformed input and intentionally use
# compact patterns (indexing, single_match, collapsible_if) that would be
# noise in production crypto code but accurately reflect the shape of a
# fuzz harness. The lints below are tuned for that:
#
#   * Hard-deny the things that are actively dangerous (unsafe_code is
#     forbidden in [lints.rust], and `todo!`/`unimplemented!` are denied
#     here because they panic in fuzz runs and would mask real crashes).
#   * Allow stylistic nits that conflict with how fuzz harnesses are
#     commonly written: indexing into fuzz-input slices, early-bailing
#     `if let Ok(...)`, etc.
#   * Keep crypto-relevant warnings (arithmetic overflow, float compare)
#     so real bugs still surface.

# Dangerous in any code path — never allow.
todo = "deny"
unimplemented = "deny"

# Allowed: fuzz harnesses index into bounded slices, use single-match for
# "exercise the Ok path", and rely on `unwrap`/`expect` on paths that are
# either provably-succeeding (generate_key) or intentionally-panicking
# (assertion of a fuzz invariant).
unwrap_used = "allow"
expect_used = "allow"
indexing_slicing = "allow"
panic = "allow"
single_match = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
get_first = "allow"
redundant_clone = "allow"
map_identity = "allow"

# Crypto-relevant checks that should still warn, not deny — these often
# indicate real bugs in fuzz targets too.
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
float_cmp = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
lossy_float_literal = "warn"
string_add = "warn"
string_add_assign = "warn"
unnecessary_cast = "warn"

[features]
default = []

[dependencies]
libfuzzer-sys = "0.4"
subtle = "2.6"
rand = { version = "0.8.5", features = ["std_rng"] }
# Instrumented allocator wrapper for `fuzz_dos_alloc_bounded`. Wraps
# `System`; does not change allocation behavior for other targets.
stats_alloc = "0.1"

[dependencies.latticearc]
path = "../latticearc"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }

# ============================================================================
# Existing Fuzz Targets
# ============================================================================

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encrypt_fuzz"
path = "fuzz_targets/encrypt_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cross_border_fuzz"
path = "fuzz_targets/cross_border_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hybrid_sign_fuzz"
path = "fuzz_targets/hybrid_sign_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hybrid_encrypt_fuzz"
path = "fuzz_targets/hybrid_encrypt_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hybrid_kem_fuzz"
path = "fuzz_targets/hybrid_kem_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "constant_time_fuzz"
path = "fuzz_targets/constant_time_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ml_dsa_fuzz"
path = "fuzz_targets/ml_dsa_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chacha_poly_fuzz"
path = "fuzz_targets/chacha_poly_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hmac_fuzz"
path = "fuzz_targets/hmac_fuzz.rs"
test = false
doc = false
bench = false

# ============================================================================
# KEM Fuzzing (Tasks 3.2.1-3.2.3)
# ============================================================================

[[bin]]
name = "fuzz_ml_kem_encaps"
path = "fuzz_targets/fuzz_ml_kem_encaps.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ml_kem_decaps"
path = "fuzz_targets/fuzz_ml_kem_decaps.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ml_kem_keygen"
path = "fuzz_targets/fuzz_ml_kem_keygen.rs"
test = false
doc = false
bench = false

# ============================================================================
# Signature Fuzzing (Tasks 3.2.4-3.2.6)
# ============================================================================

[[bin]]
name = "fuzz_ml_dsa_sign"
path = "fuzz_targets/fuzz_ml_dsa_sign.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ml_dsa_verify"
path = "fuzz_targets/fuzz_ml_dsa_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_slh_dsa_sign"
path = "fuzz_targets/fuzz_slh_dsa_sign.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fn_dsa_sign"
path = "fuzz_targets/fuzz_fn_dsa_sign.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fn_dsa_verify"
path = "fuzz_targets/fuzz_fn_dsa_verify.rs"
test = false
doc = false
bench = false

# ============================================================================
# AEAD Fuzzing (Tasks 3.2.7-3.2.8)
# ============================================================================

[[bin]]
name = "fuzz_aes_gcm"
path = "fuzz_targets/fuzz_aes_gcm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chacha20"
path = "fuzz_targets/fuzz_chacha20.rs"
test = false
doc = false
bench = false

# ============================================================================
# ============================================================================
# Key Derivation Fuzzing
# ============================================================================

[[bin]]
name = "fuzz_hkdf"
path = "fuzz_targets/fuzz_hkdf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pbkdf2"
path = "fuzz_targets/fuzz_pbkdf2.rs"
test = false
doc = false
bench = false

# ============================================================================
# Hash Function Fuzzing
# ============================================================================

[[bin]]
name = "fuzz_sha256"
path = "fuzz_targets/fuzz_sha256.rs"
test = false
doc = false
bench = false

# ============================================================================
# MAC Fuzzing
# ============================================================================

[[bin]]
name = "fuzz_hmac_sha512"
path = "fuzz_targets/fuzz_hmac_sha512.rs"
test = false
doc = false
bench = false

# ============================================================================
# Classical Crypto Fuzzing
# ============================================================================

[[bin]]
name = "fuzz_ed25519"
path = "fuzz_targets/fuzz_ed25519.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_x25519"
path = "fuzz_targets/fuzz_x25519.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ecdh_p256"
path = "fuzz_targets/fuzz_ecdh_p256.rs"
test = false
doc = false
bench = false

# ============================================================================
# RNG Fuzzing
# ============================================================================

[[bin]]
name = "fuzz_random"
path = "fuzz_targets/fuzz_random.rs"
test = false
doc = false
bench = false

# ============================================================================
# Serialization / Deserialization Fuzzing (Gap 8)
# ============================================================================

[[bin]]
name = "fuzz_portable_key_json"
path = "fuzz_targets/fuzz_portable_key_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encrypted_data_deser"
path = "fuzz_targets/fuzz_encrypted_data_deser.rs"
test = false
doc = false
bench = false

# ============================================================================
# DoS Fuzzing (allocation-bounded adversarial inputs)
# ============================================================================

[[bin]]
name = "fuzz_dos_alloc_bounded"
path = "fuzz_targets/fuzz_dos_alloc_bounded.rs"
test = false
doc = false
bench = false
