[package]
name = "latticearc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Post-quantum cryptography CLI — keygen, encrypt, decrypt, sign, verify, hash, KDF"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "latticearc-cli"
path = "src/main.rs"

[dependencies]
# `tracing-init` enables the library's `init_tracing` helpers (subscriber
# wiring is the binary's job; pulling them in here is correct).
# `test-utils` exposes `pbkdf2_kat`, the legitimate KAT-replay entry
# point routed by the `--allow-weak-iterations` flag on the `kdf` command.
latticearc = { path = "../latticearc", version = "0.8", features = ["tracing-init", "test-utils"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
# Round-21 audit fix #14/#20: CLI commands route diagnostic info
# (paths, algorithm names) through `tracing::debug!` instead of
# `eprintln!` to avoid leaking onto stderr by default.
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
