[package]
name = "latticearc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Post-quantum cryptography CLI — keygen, encrypt, decrypt, sign, verify, hash, KDF"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "latticearc-cli"
path = "src/main.rs"

[dependencies]
# `tracing-init` enables the library's `init_tracing` helpers (subscriber
# wiring is the binary's job; pulling them in here is correct).
# `kat-replay` exposes `pbkdf2_kat`, the legitimate KAT-replay entry
# point routed by the `--allow-weak-iterations` flag on the `kdf` command.
# We deliberately do NOT enable `test-utils`: that feature gates
# soundness-bypassing items (`SigmaProof::challenge_mut`,
# `clear_error_state`, `restore_operational_state`) which must never be
# reachable from a production CLI build. Round-26 audit fix C1.
latticearc = { path = "../latticearc", version = "0.8", features = ["tracing-init", "kat-replay"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
# Constant-time byte comparison for `verify` (round-34 L11). The
# specific input is currently public, but the comparison primitive
# should be CT so a future change that routes secret material through
# the same path inherits the discipline by default.
subtle = { workspace = true }
# Round-21 audit fix #14/#20: CLI commands route diagnostic info
# (paths, algorithm names) through `tracing::debug!` instead of
# `eprintln!` to avoid leaking onto stderr by default.
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
